# tournament_builder

./: .gitignore  .gitmodules  LICENSE  README.md  make_release_packages.bat
.github/workflows/: cmake-multi-platform.yml
documentation/: readme.md
documentation/json/: competition.md  competitor.md  entry_list.md  error_messages.md  naming_rules.md  readme.md  references.md  tags.md  world.md
documentation/json/descriptors/: DEBUG_never_resolves.md  competitor_view.md  knockout_bracket.md  readme.md  round_of_matches.md  round_robin.md
documentation/json/events/: add_tags.md  readme.md  resolve_all_references.md  resolve_reference.md  set_finishing_positions.md
example_templates/: not_json_format.json  template_root.json
example_templates/subfolder/: subfile.json
examples/: readme.md
examples/in/: DEBUG_never_resolves.json  ERROR_invalid_competitor_view_2.json  add_tags.json  complex_elim.json  external_files.json  round_of_matches.json  round_robin.json  set_finishing_positions.json  simple_elim.json  templates.json  test_multireferences.json  test_references.json  test_tags.json
examples/in/errors/: ERROR_empty_name.json  ERROR_event_type_does_not_exist.json  ERROR_file_missing_file.json  ERROR_file_missing_object.json  ERROR_file_target_bad_parse.json  ERROR_invalid_competitor_view_1.json  ERROR_invalid_competitor_view_2.json  ERROR_invalid_competitor_view_3.json  ERROR_invalid_descriptor_type.json  ERROR_invalid_format.json  ERROR_invalid_name.json  ERROR_knockout_bracket_wrong_entry_list_size.json  ERROR_mismatches_brackets.json  (+24 more)
source_code/: CMakeLists.txt  build_and_run_tests.bat  clean_workspace.bat
source_code/cli/: CMakeLists.txt  clean_workspace.bat
source_code/cli/package_extras/: README.txt
source_code/cli/src/: cli_main.cpp  invoke_cli.cpp
source_code/cli_dbg/: CMakeLists.txt  clean_workspace.bat
source_code/cli_dbg/src/: dbg_main.cpp
source_code/clib/: CMakeLists.txt  clean_workspace.bat
source_code/clib/include/: tournament_builder.h
source_code/clib/package_extras/: README.txt
source_code/clib/src/: tournament_builder_clib.cpp
source_code/cpplib/: CMakeLists.txt  clean_workspace.bat  cpplib.natvis
source_code/cpplib/include/: tournament_builder.hpp  tournament_builder_json_obj.hpp  tournament_builder_native.hpp
source_code/cpplib/include/tournament_builder/: competition.hpp  competitor.hpp  entry_list.hpp  exceptions.hpp  extra_args.hpp  generic_utils.hpp  ireferencable.hpp  itaggable.hpp  name.hpp  reference.hpp  serialize.hpp  tag.hpp  tag_and_reference_helpers.hpp  token.hpp  world.hpp  world_path_manager.hpp
source_code/cpplib/include/tournament_builder/descriptors/: DEBUG_never_resolves.hpp  competitor_view.hpp  descriptor_base.hpp  descriptor_base_internal.hpp  descriptor_handle.hpp  knockout_bracket.hpp  round_of_matches_descriptor.hpp  round_robin_descriptor.hpp
source_code/cpplib/include/tournament_builder/events/: event_base_impl.hpp  resolve_references_event.hpp  set_finishing_positions_event.hpp
source_code/cpplib/include/tournament_builder/json/: json_helpers.hpp
source_code/cpplib/src/: tournament_builder.cpp  tournament_builder_json_obj.cpp  tournament_builder_native.cpp
source_code/cpplib/src/tournament_builder/: competition.cpp  competitor.cpp  entry_list.cpp  exceptions.cpp  extra_args.cpp  ireferencable.cpp  itaggable.cpp  name.cpp  random.cpp  reference.cpp  serialize.cpp  tag.cpp  tag_and_reference_helpers.cpp  token.cpp  world.cpp  world_path_manager.cpp
source_code/cpplib/src/tournament_builder/descriptors/: DEBUG_never_resolves.cpp  competitor_view.cpp  descriptor_base.cpp  descriptor_base_internal.cpp  knockout_bracket.cpp  round_of_matches_descriptor.cpp  round_robin_descriptor.cpp
source_code/cpplib/src/tournament_builder/events/: add_tags_event.cpp  event_base_impl.cpp  resolve_references_event.cpp  set_finishing_positions_event.cpp
source_code/cpplib/src/tournament_builder/json/: json_helpers.cpp
source_code/documentation_builder/: CMakeLists.txt
source_code/documentation_builder/documentation_src/: README.md
source_code/documentation_builder/documentation_src/documentation/: readme.md
source_code/documentation_builder/documentation_src/documentation/json/: competition.md  competitor.md  entry_list.md  error_messages.md  naming_rules.md  readme.md  references.md  tags.md  world.md
source_code/documentation_builder/documentation_src/documentation/json/descriptors/: DEBUG_never_resolves.md  competitor_view.md  knockout_bracket.md  readme.md  round_of_matches.md  round_robin.md
source_code/documentation_builder/documentation_src/documentation/json/events/: add_tags.md  readme.md  resolve_all_references.md  resolve_reference.md  set_finishing_positions.md
source_code/documentation_builder/src/: main.cpp
source_code/include/: tournament_builder_json_obj.hpp  tournament_builder_native.hpp
source_code/include/cli/: invoke_cli.h
source_code/include/tournament_builder/: exceptions.hpp  generic_utils.hpp  random.hpp  serialize.hpp  stats.hpp
source_code/include/tournament_builder/descriptors/: round_robin_descriptor.hpp
source_code/include/tournament_builder/events/: add_tags_event.hpp  event_base.hpp
source_code/include/tournament_builder/json/: json_helpers.hpp
source_code/mono/: CMakeLists.txt  clean_workspace.bat
source_code/mono/package_extras/: README.txt
source_code/mono/src/: tournament_builder_mono.cs
source_code/scripts/: build_and_run_tests.bat  update_documentation.bat
source_code/src/: tournament_builder_json_obj.cpp  tournament_builder_native.cpp
source_code/src/cli/: cli_main.cpp  invoke_cli.cpp
source_code/src/cli_dbg/: dbg_main.cpp
source_code/src/tournament_builder/: competition.cpp  exceptions.cpp  random.cpp  world.cpp
source_code/src/tournament_builder/descriptors/: descriptor_base_internal.cpp  round_robin_descriptor.cpp
source_code/src/tournament_builder/events/: add_tags_event.cpp  event_base.cpp  event_base_impl.cpp
source_code/src/tournament_builder/json/: json_helpers.cpp
source_code/static_library/: CMakeLists.txt
